test/error/string_directive.sv
// pattern: compiler directives are forbidden inside strings
`"asdf `line`"
